src/test/ui/type-alias-impl-trait/structural-match.stderr
error: `impl Send` cannot be used in patterns
  --> $DIR/structural-match.rs:15:9
   |
LL |         VALUE => (),
   |         ^^^^^

error: `impl Send` cannot be used in patterns
  --> $DIR/structural-match.rs:15:9
   |
LL |         VALUE => (),
   |         ^^^^^

error: aborting due to 2 previous errors

